# GDWE

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.guess  config.h  config.status  config.sub  configure  configure.ac  libtool  ltmain.sh  stopwords-en.txt
corpus/nyt/Testset/: testset_2_test.csv  testset_2_val.csv
corpus/nyt/forClassification/sep_class_label/dev/: 1990.txt  1991.txt  1992.txt  1993.txt  1994.txt  1995.txt  1996.txt  1997.txt  1998.txt  1999.txt  2000.txt  2001.txt  2002.txt  2003.txt  2004.txt  2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt
corpus/nyt/forClassification/sep_class_label/test/: 1990.txt  1991.txt  1992.txt  1993.txt  1994.txt  1995.txt  1996.txt  1997.txt  1998.txt  1999.txt  2000.txt  2001.txt  2002.txt  2003.txt  2004.txt  2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt
corpus/nyt/forClassification/sep_class_label/train/: 1990.txt  1991.txt  1992.txt  1993.txt  1994.txt  1995.txt  1996.txt  1997.txt  1998.txt  1999.txt  2000.txt  2001.txt  2002.txt  2003.txt  2004.txt  (+12 more)
corpus/nyt/forClassification/vocab/: vocab-5.txt
eval/: classifier_m.py  classifier_oov.py  eval_align_online2_test.py  eval_metrics2.py
scripts/: run_classification.sh  run_oov.sh  train_NYT_graph.sh
src/: Makefile  Makefile.am  Makefile.in  dense_matrix.h  fast_sigmoid.h  graph.h  random.h  skipgram.h  timer.h  unigram_table.h  util.h  vec_util.h  vocab.h  yskip  yskip.cpp
src/.deps/: yskip.Po
(+354 files in other folders)
